--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -44,17 +44,21 @@
         android:layout_marginHorizontal="@dimen/common_margin_default"
         android:layout_marginVertical="@dimen/common_margin_max"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_bookmark" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movies_bookmark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/common_margin_min"
         android:layout_marginTop="@dimen/common_margin_min"
+        android:background="@color/black"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_bookmark" />
 
